--- a/L1/anxiety.html
+++ b/L1/anxiety.html
@@ -109,7 +109,7 @@
                                         </ul>
                                         <ul class="list-unstyled main-menu__top-menu">
                                             <li><a href="about-sattva.html">About</a></li>
-                                            <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                            <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                             <li><a href="sattva-contactus.html">Contact Us</a></li>
                                         </ul>
                                     </div>
@@ -155,7 +155,7 @@
                                             <li><a href="selfcare.html">Self Care</a></li>
                                             <li><a href="therapies.html">Therapies</a></li>
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
-                                            <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                            <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                             <li>
                                                 <a href="sattva-contactus.html">Contact Us</a>
                                             </li>
@@ -290,6 +290,91 @@
                             <h3 class="services-details__title-1">Basic Science behind it</h3>
                             <p class="services-details__text-1 mt-20">Anxiety is sometimes referred to as the psychological equivalent of physical pain. It is apparent that the mind has difficulty dealing with strongly conflicting emotions. One mental mechanism that the mind uses to deal with such conflict is repression. In the process of repression, the mind simply blocks out one side of the conflicting emotions. When this act of repression is not entirely successful, the repressed material is constantly struggling to erupt into consciousness. The anxiety felt by the patient is often closely correlated with the amount of mental effort spent in keeping this material out of consciousness. A number of mental maneuvers, referred to as defense mechanisms, are utilized in the effort to prevent repressed material from reaching consciousness. </p>
                             <p class="services-details__text-1 mt-20">One reason that extensive utilization of defense mechanisms creates problems for patients is that such use tends to distort reality. The patient forced to block out one side of a conflict has created a situation that limits the ability to see all aspects of a problem. This, in turn, makes it difficult to choose the most appropriate solution for difficulties.</p>
+
+                            <h3 class="services-details__title-2">Our Management :</h3>
+                            <ul class="services-details__benefit-points list-unstyled">
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Assessment: Understand the client's history and symptoms.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Therapeutic Alliance: Build a trusting relationship between therapist and client.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Psychoeducation: Educate about depression and reduce stigma.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Goal Setting: Collaboratively set achievable treatment goals.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Cognitive Behavioral Therapy (CBT): Identify and challenge negative thought patterns.</p>
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Mindfulness-Based Approaches: Incorporate mindfulness techniques.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Interpersonal Therapy (IPT): Improve relationships and communication skills.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Medication: Prescribed if necessary, closely monitored by a psychiatrist.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Regular Assessment and Adjustment: Continually assess progress and modify the treatment plan.</p>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="icon">
+                                        <span class="fa fa-check"></span>
+                                    </div>
+                                    <div class="text">
+                                        <p>Relapse Prevention: Develop strategies to maintain mental health beyond therapy.</p>
+                                    </div>
+                                </li>
+                            </ul>
                             <h3 class="services-details__title-1">Characteristic Symptoms Pathological Anxiety</h3>
                             <p class="services-details__text-1 mt-20">Cognitive symptoms: fear of losing control; fear of physical injury or death; fear of "going crazy"; fear of negative evaluation by others; frightening thoughts, mental images, or memories; perception of unreality or detachment; poor concentration, confusion, distractible; narrowing of attention, hypervigilance for threat; poor memory; and difficulty speaking.</p>
                             <p class="services-details__text-1 mt-20">Cognitive symptoms: fear of losing control; fear of physical injury or death; fear of "going crazy"; fear of negative evaluation by others; frightening thoughts, mental images, or memories; perception of unreality or detachment; poor concentration, confusion, distractible; narrowing of attention, hypervigilance for threat; poor memory; and difficulty speaking.</p>
@@ -397,7 +482,7 @@
                                     <li><a href="about-sattva.html">About</a></li>
                                     <li><a href="sattva-booking-appointment.html">Book Appointment</a></li>
                                     <li><a href="sattva-gallery.html">Gallery</a></li>
-                                    <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                    <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                     <li><a href="sattva-contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
