--- a/L1/childhood-disorders.html
+++ b/L1/childhood-disorders.html
@@ -109,7 +109,7 @@
                                         </ul>
                                         <ul class="list-unstyled main-menu__top-menu">
                                             <li><a href="about-sattva.html">About</a></li>
-                                            <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                            <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                             <li><a href="sattva-contactus.html">Contact Us</a></li>
                                         </ul>
                                     </div>
@@ -155,7 +155,7 @@
                                             <li><a href="selfcare.html">Self Care</a></li>
                                             <li><a href="therapies.html">Therapies</a></li>
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
-                                            <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                            <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                             <li>
                                                 <a href="sattva-contactus.html">Contact Us</a>
                                             </li>
@@ -304,7 +304,7 @@
                             <div class="treatment-box mt-20">
                                 <p class="services-details__text-1"><strong style="color:#50235d">Treatment:</strong> Behavioral therapy, speech therapy, occupational therapy, and support at school.</p>
                             </div>
-                            <h3 class="services-details__title-1">Oppositional Defiant Disorder (ODD</h3>
+                            <h3 class="services-details__title-1">Oppositional Defiant Disorder (ODD)</h3>
                             <p class="services-details__text-1 mt-20">Being stubborn, defiant, and disobedient towards authority figures.</p>
                             <div class="treatment-box mt-20">
                                 <p class="services-details__text-1"><strong style="color:#50235d">Treatment:</strong> Therapy, such as parent-child interaction therapy, behavior management techniques, and support at school.</p>
@@ -437,7 +437,7 @@
                                     <li><a href="about-sattva.html">About</a></li>
                                     <li><a href="sattva-booking-appointment.html">Book Appointment</a></li>
                                     <li><a href="sattva-gallery.html">Gallery</a></li>
-                                    <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                    <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                     <li><a href="sattva-contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
