--- a/L1/depression-service.html
+++ b/L1/depression-service.html
@@ -109,7 +109,7 @@
                                         </ul>
                                         <ul class="list-unstyled main-menu__top-menu">
                                             <li><a href="about-sattva.html">About</a></li>
-                                            <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                            <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                             <li><a href="sattva-contactus.html">Contact Us</a></li>
                                         </ul>
                                     </div>
@@ -155,7 +155,7 @@
                                             <li><a href="selfcare.html">Self Care</a></li>
                                             <li><a href="therapies.html">Therapies</a></li>
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
-                                            <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                            <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                             <li>
                                                 <a href="sattva-contactus.html">Contact Us</a>
                                             </li>
@@ -301,7 +301,7 @@
                                                 <h3 class="services-details__title-1">Depression</h3>
                                                 <p class="services-details__text-1">Depression is a mental health disorder characterized by persistent feelings of sadness, hopelessness, and a lack of interest or pleasure in daily activities. It can also lead to various physical and cognitive symptoms, affecting sleep, appetite, energy levels, concentration, and overall well-being. Depression is a common and treatable condition often addressed through psychotherapy, medication, or a combination of both.</p>
                                                 <!--<h3 class="services-details__title-2">Our therapies can improve your self esteem.</h3>-->
-                                                <h3 class="services-details__title-2">Our Management can improve your self esteem.</h3>
+                                                <h3 class="services-details__title-2">Our Management :</h3>
                                                 <ul class="services-details__benefit-points list-unstyled">
                                                     <li>
                                                         <div class="icon">
@@ -540,10 +540,10 @@
                                                         <div class="col-xl-4 col-lg-4 col-md-6">
                                                             <div class="get-one__points-single">
                                                                 <div class="get-one__points-title">
-                                                                    <h4><a href="#">Concentration</a></h4>
+                                                                    <h4><a href="#">Concentration Difficulties</a></h4>
                                                                 </div>
                                                                 <div class="get-one__points-text-box">
-                                                                    <h4><a href="#">Concentration</a></h4>
+                                                                    <h4><a href="#">Concentration Difficulties</a></h4>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -780,7 +780,7 @@
                                     <li><a href="about-sattva.html">About</a></li>
                                     <li><a href="sattva-booking-appointment.html">Book Appointment</a></li>
                                     <li><a href="sattva-gallery.html">Gallery</a></li>
-                                    <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                    <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                     <li><a href="sattva-contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
