--- a/L1/index.html
+++ b/L1/index.html
@@ -110,7 +110,7 @@
                                         </ul>
                                         <ul class="list-unstyled main-menu__top-menu">
                                             <li><a href="about-sattva.html">About</a></li>
-                                            <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                            <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                             <li><a href="sattva-contactus.html">Contact Us</a></li>
                                         </ul>
                                     </div>
@@ -156,7 +156,7 @@
                                             <li><a href="selfcare.html">Self Care</a></li>
                                             <li><a href="therapies.html">Therapies</a></li>
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
-                                            <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                            <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                             <li>
                                                 <a href="sattva-contactus.html">Contact Us</a>
                                             </li>
@@ -208,7 +208,7 @@
 
                 <div class="item main-slider__slide-3">
                     <div class="main-slider__bg">
-                        <video autoplay muted loop playsinline preload="metadata" src="assets/images/new-home/video/keyboard-video.mp4"></video>
+                        <video autoplay muted loop playsinline preload="metadata" src="assets/images/new-home/video/banner-video-1.mp4"></video>
                     </div>
                 </div>
 
@@ -709,7 +709,7 @@
         <section class="video-banner-section">
             <div class="video-wrapper">
                 <video autoplay muted loop playsinline preload="metadata">
-                    <source src="assets/images/new-home/video/keyboard-video.mp4" type="video/mp4">
+                    <source src="assets/images/new-home/video/autoplay-video.mp4" type="video/mp4">
                 </video>
             </div>
         </section>
@@ -1133,7 +1133,7 @@
                                     <li><a href="about-sattva.html">About</a></li>
                                     <li><a href="sattva-booking-appointment.html">Book Appointment</a></li>
                                     <li><a href="sattva-gallery.html">Gallery</a></li>
-                                    <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                    <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                     <li><a href="sattva-contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
