--- a/L1/sattva-contactus.html
+++ b/L1/sattva-contactus.html
@@ -109,7 +109,7 @@
                                         </ul>
                                         <ul class="list-unstyled main-menu__top-menu">
                                             <li><a href="about-sattva.html">About</a></li>
-                                            <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                            <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                             <li><a href="sattva-contactus.html">Contact Us</a></li>
                                         </ul>
                                     </div>
@@ -155,7 +155,7 @@
                                             <li><a href="selfcare.html">Self Care</a></li>
                                             <li><a href="therapies.html">Therapies</a></li>
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
-                                            <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                            <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                             <li>
                                                 <a href="sattva-contactus.html">Contact Us</a>
                                             </li>
@@ -212,7 +212,7 @@
             <div class="container">
                 <div class="section-title text-center">
                     <span class="section-title__tagline">Contact with us</span>
-                    <h2 class="section-title__title">Feel Free to get <span>in</span> <br> touch with us</h2>
+                    <h2 class="section-title__title">Feel free to get <span>in</span> <br> touch with us</h2>
                 </div>
                 <div class="contact-page__form-box">
                     <form action="https://bracketweb.com/delogis-html/main-html/assets/inc/sendemail.php" class="contact-page__form contact-form-validated"
@@ -362,7 +362,7 @@
                                     <li><a href="about-sattva.html">About</a></li>
                                     <li><a href="sattva-booking-appointment.html">Book Appointment</a></li>
                                     <li><a href="sattva-gallery.html">Gallery</a></li>
-                                    <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                    <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                     <li><a href="sattva-contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
