--- a/L1/sattva-gallery.html
+++ b/L1/sattva-gallery.html
@@ -109,7 +109,7 @@
                                         </ul>
                                         <ul class="list-unstyled main-menu__top-menu">
                                             <li><a href="about-sattva.html">About</a></li>
-                                            <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                            <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                             <li><a href="sattva-contactus.html">Contact Us</a></li>
                                         </ul>
                                     </div>
@@ -155,7 +155,7 @@
                                             <li><a href="selfcare.html">Self Care</a></li>
                                             <li><a href="therapies.html">Therapies</a></li>
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
-                                            <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                            <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                             <li>
                                                 <a href="sattva-contactus.html">Contact Us</a>
                                             </li>
@@ -404,26 +404,11 @@
                     </div>
                     <div class="tab-pane fade" id="video" role="tabpanel" aria-labelledby="video-tab">
                         <div class="row row-video">
-                            <!--<div class="col-xl-4 col-lg-6 col-md-6 margin-video">
-                            <a type="button"  data-bs-toggle="modal" data-bs-target="#exampleModal">
-                                 <img src="assets/images/sattva-premises/video-image-popup-1.jpeg" class="w-100">
-                            </a>
-                            </div>
                             <div class="col-xl-4 col-lg-6 col-md-6 margin-video">
-                                <a type="button"  data-bs-toggle="modal" data-bs-target="#exampleModal2">
-                                     <img src="assets/images/sattva-premises/video-image-popup-2.jpeg" class="w-100">
-                                </a>
-                            </div>-->
-                            <div class="col-xl-4 col-lg-6 col-md-6 margin-video">
-                                <a type="button" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                                <a data-bs-toggle="modal" data-bs-target="#exampleModal3">
                                     <img src="assets/images/sattva-premises/video-image-popup-3.jpeg" class="w-100">
                                 </a>
                             </div>
-                            <!--<div class="col-xl-4 col-lg-6 col-md-6 margin-video">
-                                        <a type="button" data-bs-toggle="modal" data-bs-target="#exampleModal4">
-                                             <img src="assets/images/sattva-premises/video-image-popup-4.jpeg" class="w-100">
-                                        </a>
-                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -537,7 +522,7 @@
                                     <li><a href="about-sattva.html">About</a></li>
                                     <li><a href="sattva-booking-appointment.html">Book Appointment</a></li>
                                     <li><a href="sattva-gallery.html">Gallery</a></li>
-                                    <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                    <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                     <li><a href="sattva-contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
