--- a/L1/therapies.html
+++ b/L1/therapies.html
@@ -112,7 +112,7 @@
                                         </ul>
                                         <ul class="list-unstyled main-menu__top-menu">
                                             <li><a href="about-sattva.html">About</a></li>
-                                            <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                            <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                             <li><a href="sattva-contactus.html">Contact Us</a></li>
                                         </ul>
                                     </div>
@@ -158,7 +158,7 @@
                                             <li><a href="selfcare.html">Self Care</a></li>
                                             <li><a href="therapies.html">Therapies</a></li>
                                             <li><a href="sattva-gallery.html">Gallery </a></li>
-                                            <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                            <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                             <li>
                                                 <a href="sattva-contactus.html">Contact Us</a>
                                             </li>
@@ -220,14 +220,48 @@
                     </div>
                     <ul class="tab-buttons clearfix list-unstyled">
                         <li data-tab="#art-therapy" class="tab-btn active-btn">
-                            <span>Art Therapy</span>
+                            <div class="icon-box">
+                                <img src="assets/images/new-home/therapy/art-therapy-icon.png" />
+                                <h4>Art Therapy</h4>
+                            </div>
+                            <!--<span>Art Therapy</span>-->
                         </li>
-                        <li data-tab="#techniques-for-stress-relief" class="tab-btn"><span>Breathing Techniques</span></li>
+                        <li data-tab="#techniques-for-stress-relief" class="tab-btn">
+                            <div class="icon-box">
+                                <img src="assets/images/new-home/therapy/breathing-technique.png" />
+                                <h4>Breathing Techniques</h4>
+                            </div>
+                            <!--<span>Breathing Techniques</span>-->
+                        </li>
+                        <!--<li data-tab="#techniques-for-stress-relief" class="tab-btn"><span>Breathing Techniques</span></li>-->
                         <li data-tab="#emotional-wellness" class="tab-btn">
-                            <span>Journaling Techniques</span>
+                            <div class="icon-box">
+                                <img src="assets/images/new-home/therapy/emotional-welness.png" />
+                                <h4>Journaling Excersices</h4>
+                            </div>
+                            <!--<span>Journaling Techniques</span>-->
                         </li>
-                        <li data-tab="#muscle-relaxation" class="tab-btn"><span>Muscle Relaxation</span></li>
-                        <li data-tab="#behaviour-therapy" class="tab-btn"><span>Cognitive Behavioral Therapy</span></li>
+                        <li data-tab="#muscle-relaxation" class="tab-btn">
+                            <div class="icon-box">
+                                <img src="assets/images/new-home/therapy/muscle-relaxation.png" />
+                                <h4>Muscle Relaxation</h4>
+                            </div>
+                            <!--<span>Muscle Relaxation</span>-->
+                        </li>
+                        <li data-tab="#behaviour-therapy" class="tab-btn">
+                            <div class="icon-box">
+                                <img src="assets/images/new-home/therapy/congitive-behaviour-icon.png" />
+                                <h4>Cognitive Behavioral Therapy</h4>
+                            </div>
+                        <!--<span>Cognitive Behavioral Therapy</span>-->
+                        </li>
+                        <li data-tab="#extra-section" class="tab-btn">
+                            <div class="icon-box">
+                                <img src="assets/images/new-home/therapy/art-therapy-icon.png" />
+                                <h4>Extra Section</h4>
+                            </div>
+                            <!--<span>Cognitive Behavioral Therapy</span>-->
+                        </li>
                     </ul>
                     <div class="tabs-content mt-20">
                         <!--tab-->
@@ -635,6 +669,14 @@
                             </div>
                         </div>
                         <!--tab-->
+                        <div class="tab" id="extra-section">
+                            <div class="new-content">
+                                <div class="services-details__right">
+                                    <h3 class="services-details__title-1">Text coming soon...</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <!--tab-->
                     </div>
                 </div>
             </div>
@@ -698,7 +740,7 @@
                                     <li><a href="about-satvaa.html">About</a></li>
                                     <li><a href="sattva-booking-appointment.html">Book Appointment</a></li>
                                     <li><a href="sattva-gallery.html">Gallery</a></li>
-                                    <li><a href="sattva-testimonial.html">Testimonial</a></li>
+                                    <li><a href="sattva-testimonial.html">Testimonials</a></li>
                                     <li><a href="sattva-contactus.html">Contact Us</a></li>
                                 </ul>
                             </div>
